--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -144,7 +144,7 @@ section#sampleProject {
 p#footer__cpy {
   color: #E2E2E2;
   font-size: 0.8em;
-  padding-right: 1vw;
+  padding-right: 2em;
   text-align: end;
 }
 /* ===================================================================
